# general-py

./: pyproject.toml
src/general/tkinter/: main.py
