[project]
name = "general"
version = "1.0.0"
description = ""
authors = [
    {name = "jiaw.hu",email = "h96599021@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

[tool.poetry]
packages = [{include = "general", from = "src"}]

[tool.poetry.dependencies]
pygame = ">=2.6.1,<3.0.0"
auto-py-to-exe = "^2.48.1"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '.+/(dist|.venv|venv|build)/.+'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*
'''